# pyStorage

./: .gitignore  pyproject.toml
scripts/: main.py
src/pystorage/: __init__.py
src/pystorage/config/: __currency__.csv  __init__.py  __scene__.csv  currencyConversionRates.txt  redefinedUnits.txt  units.csv
src/pystorage/data/: CEPCI.csv  Currencies.csv  __init__.py  __methods__.py
src/pystorage/data/CAES/: PNNL.csv
src/pystorage/data/Currencies/: Currencies.csv
src/pystorage/data/electricityTariffs/: Bulgaria.csv  Croatia.csv  Ireland.csv  NorthMacedonia.csv  Serbia.csv  UK.csv
src/pystorage/systems/: __init__.py  powerToPower.py
src/pystorage/technologies/: __init__.py  powerToPower.py
src/pystorage/tools/: math.py
tests/: test_me.py
