[project]
authors = [{name = "Paul Sapin", email = "p.sapin@imperial.ac.uk"}]
name = "pyStorage"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["pyfluids>=2.8.0,<3", "rich>=13.9.4,<14"]

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

# TASKS

[tool.pixi.tasks]
start = "python __init__.py"

[tool.pixi.feature.test.tasks]
test = "pytest"

# DEPENDENCIES

[tool.pixi.pypi-dependencies]
pystorage = { path = ".", editable = true }

[tool.pixi.dependencies]
numpy = "*"
pandas = "*"
matplotlib = "*"
black = ">=25.1.0,<26"
pixi-pycharm = ">=0.0.8,<0.0.9"
pygments = ">=2.19.1,<3"
scipy = ">=1.15.2,<2"

[dependency-groups]
test = ["pytest"]
