[project]
authors = [{name = "Paul Sapin", email = "p.sapin@imperial.ac.uk"}]
name = "pyStorage"
requires-python = ">= 3.10"
version = "0.1.0"
dependencies = ["pyfluids>=2.8.0,<3", "rich>=13.9.4,<14"]

[tool.pixi.environments]
default = { solve-group = "default" }
py310 = ["py310"]
py311 = ["py311"]
py312 = ["py312"]
py313 = ["py313"]
test = { features = ["test"], solve-group = "default" }

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", 'osx-64']

# TASKS

[tool.pixi.tasks]
main = "python scripts/main.py"

[tool.pixi.feature.test.tasks]
test = "pytest"

# DEPENDENCIES

[tool.pixi.pypi-dependencies]
pystorage = { path = ".", editable = true }

[tool.pixi.dependencies]
numpy = "*"
pandas = "*"
matplotlib = "*"
black = ">=25.1.0,<26"
pygments = ">=2.19.1,<3"
scipy = ">=1.15.2,<2"
pixi-pycharm = ">=0.0.8,<0.0.9"

[dependency-groups]
test = ["pytest"]

# ENVIRONMENT SPECIFIC DEPENDENCES
[tool.pixi.feature.py310.dependencies]
python = "3.10.*"
[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"
[tool.pixi.feature.py313.dependencies]
python = "3.13.*"
